fixed mobile bug top not visibile

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,12 @@ html {
   box-sizing: inherit;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /*---------------------------------------/*
  # ELEMENTS
 /*---------------------------------------*/
